--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <head>
     <title>Golden Projekt</title>
     <meta name='viewport' content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -17,31 +17,36 @@
         <!-- Header -->
         <header>
             <nav>
-                <div class="container-fluid">
-                    <div class="nav-bar">
-                        <div class="nav-logo">
-                            <h3>LOGO</h3>
-                        </div>
-                        <div class="nav-main-menu-content">
-                            <ul class="nav-main-menu">
-                                <li><a href="">HOME</a></li>
-                                <li><a href="">SERVICES</a></li>
-                                <li><a href="">PORTFOLIO</a></li>
-                                <li><a href="">ABOUT</a></li>
-                                <li><a href="">CONTACT</a></li>
-                            </ul>
-                        </div>
+                <div class="container-fluid nav-bar">
+                    <!-- <div class="nav-bar"> -->
+                    <div class="nav-logo">
+                        <a href="#!" title="Go back to homepage"><img src="images/header/logo.png"></a>
                     </div>
+                    <div class="nav-menu">
+                        <ul class="nav-menu-content">
+                            <li><a href="#!">HOME</a></li>
+                            <li><a href="#!">SERVICES</a></li>
+                            <li><a href="#!">PORTFOLIO</a></li>
+                            <li><a href="#!">ABOUT</a></li>
+                            <li><a href="#!">CONTACT</a></li>
+                        </ul>
+                    </div>
+                    <div class="nav-mobile">
+                        <a href="#!" id='nav-toggle'></a>
+                    </div>
+                    <!-- </div> -->
                 </div>
             </nav>
         </header>
         <!-- Parallax -->
-        <section id="photo">
+        <section id="home">
             <div class="photo-inner">
                 <div class="container-fluid">
-                    <h2>Welcome To Our Studio!</h2>
-                    <h1>IT'S NICE TO MEET YOU</h1>
-                    <button>TELL ME MORE</button>
+                    <div class="content">
+                        <h2>Welcome To Our Studio!</h2>
+                        <h1>it's nice to meet you</h1>
+                        <button><span>tell me more</span></button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -50,23 +55,23 @@
             <div class="container">
                 <div class="title">
                     <h2>services</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <p>Proin iaculis purus consequat sem cure. </p>
                 </div>
                 <div class="row">
-                    <div class="column">
-                        <span><i class="fa fa-shopping-cart"></i></span>
+                    <div class="col-lg-4 service">
+                        <span><img src="images/icons/shopping-basket.png"></i></span>
                         <h3>E-Commerce</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="column">
-                        <span><i class="fa fa-laptop"></i></span>
+                    <div class="col-lg-4 service">
+                        <span><img src="images//icons/computer.png"></span>
                         <h3>Responsive Web</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="column">
-                        <span><i class="fa fa-lock"></i></span>
+                    <div class="col-lg-4 service">
+                        <span><img src="images/icons/locked.png"></span>
                         <h3>Web Security</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                 </div>
             </div>
@@ -76,38 +81,50 @@
             <div class="container">
                 <div class="title">
                     <h2>our portfolio</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <p>Proin iaculis purus consequat sem cure.</p>
                 </div>
-                <div class="row">
-                    <div class="column">
-                    	<img src="" alt="">
-                    	<h3>Eboony &amp; Ivory</h3>
-                    	<p>Branding</p>
+                <div class="row gallery">
+                    <div class="col-lg-4 ">
+                        <div class="">
+                        	<img src="images/gallery/image-1.png">
+                            <h3>Ebony &amp; Ivory</h3>
+                            <p>Branding</p>
+                        </div>
                     </div>
                     <div class="column">
-                    	<img src="" alt="">
-                    	<h3>Smart Stationary</h3>
-                    	<p>Print Design</p>
+                        <div class="image-2">
+                        	<img src="images/gallery/image-2.png">
+                            <h3>Smart Stationary</h3>
+                            <p>Print Design</p>
+                        </div>
                     </div>
                     <div class="column">
-                    	<img src="" alt="">
-                    	<h3>Clever Poster</h3>
-                    	<p>Print Design</p>
+                        <div class="image-3">
+                        	<img src="images/gallery/image-3.png">
+                            <h3>Clever Poster</h3>
+                            <p>Print Design</p>
+                        </div>
                     </div>
                     <div class="column">
-                    	<img src="" alt="">
-                    	<h3>Vinyl Record</h3>
-                    	<p>Product Mock-Up</p>
+                        <div class="image-4">
+                        	<img src="images/gallery/image-4.png">
+                            <h3>Print Design</h3>
+                            <p>Print Design</p>
+                        </div>
                     </div>
                     <div class="column">
-                    	<img src="" alt="">
-                    	<h3>Treehouse Templete</h3>
-                    	<p>Web Design</p>
+                        <div class="image-5">
+                        	<img src="images/gallery/image-5.png">
+                            <h3>Treehouse Template</h3>
+                            <p>Web Design</p>
+                        </div>
                     </div>
                     <div class="column">
-                    	<img src="" alt="">
-                    	<h3>Burned Logo</h3>
-                    	<p>Branding</p>
+                        <div class="image-6">
+                        	<img src="images/gallery/image-6.png">
+                            <h3>Burned Logo</h3>
+                            <p>Branding</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -218,7 +235,7 @@
                 <input type="email" placeholder="YOUR E-MAIL*">
                 <input type="text" placeholder="SUBJECT">
                 <textarea name="" id="" cols="30" rows="10" placeholder="YOUR MESSAGE*"></textarea>
-                <button type="submit">SEND MESSAGE</button>
+                <button type="submit"><span>send message</span></button>
             </div>
         </section>
         <!-- footer -->
