added sction protfolio

--- a/src/index.html
+++ b/src/index.html
@@ -84,44 +84,44 @@
                     <p>Proin iaculis purus consequat sem cure.</p>
                 </div>
                 <div class="row gallery">
-                    <div class="col-lg-4 ">
-                        <div class="">
-                        	<img src="images/gallery/image-1.png">
+                    <div class="col-lg-4 col-custom">
+                        <div class="image-box">
+                            <img src="images/gallery/image-1.png">
                             <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="image-2">
-                        	<img src="images/gallery/image-2.png">
+                    <div class="col-lg-4 col-custom">
+                        <div class="image-box">
+                            <img src="images/gallery/image-2.png">
                             <h3>Smart Stationary</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="image-3">
-                        	<img src="images/gallery/image-3.png">
+                    <div class="col-lg-4 col-custom">
+                        <div class="image-box">
+                            <img src="images/gallery/image-3.png">
                             <h3>Clever Poster</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="image-4">
-                        	<img src="images/gallery/image-4.png">
+                    <div class="col-lg-4 col-custom">
+                        <div class="image-box">
+                            <img src="images/gallery/image-4.png">
                             <h3>Print Design</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="image-5">
-                        	<img src="images/gallery/image-5.png">
+                    <div class="col-lg-4 col-custom">
+                        <div class="image-box">
+                            <img src="images/gallery/image-5.png">
                             <h3>Treehouse Template</h3>
                             <p>Web Design</p>
                         </div>
                     </div>
-                    <div class="column">
-                        <div class="image-6">
-                        	<img src="images/gallery/image-6.png">
+                    <div class="col-lg-4 col-custom">
+                        <div class="image-box">
+                            <img src="images/gallery/image-6.png">
                             <h3>Burned Logo</h3>
                             <p>Branding</p>
                         </div>
