--- a/src/index.html
+++ b/src/index.html
@@ -133,8 +133,8 @@
         <section id="about-us">
             <div class="container">
                 <div class="title">
-                    <h2></h2>
-                    <p></p>
+                    <h2>about us</h2>
+                    <p>Proin iaculis purus consequat sem cure.</p>
                 </div>
                 <!-- timeline -->
                 <div class="timeline">
