--- a/src/index.html
+++ b/src/index.html
@@ -138,31 +138,31 @@
                 </div>
                 <!-- timeline -->
                 <div class="timeline">
-                    <div class="container-timeline constainer-left">
+                    <div class="container-timeline container-left">
                         <div class="content">
                             <h3><span>July 2010</span><br/>Our Humble Beginnings</h3>
                             <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                         </div>
                     </div>
-                    <div class="container-timeline constainer-right">
+                    <div class="container-timeline container-right">
                         <div class="content">
                             <h3><span>January 2011</span><br/>Facing Startup Battles</h3>
                             <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                         </div>
                     </div>
-                    <div class="container-timeline constainer-left">
+                    <div class="container-timeline container-left">
                         <div class="content">
                             <h3><span>December 2012</span><br/>Enter The Dark Days</h3>
                             <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.</p>
                         </div>
                     </div>
-                    <div class="container-timeline constainer-right">
+                    <div class="container-timeline container-right">
                         <div class="content">
                             <h3><span>February 2014</span><br/>Our Triumph</h3>
                             <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean.</p>
                         </div>
                     </div>
-                    <div class="container-timeline constainer-left">
+                    <div class="container-timeline container-left">
                     </div>
                 </div>
             </div>
