added section out-team and refactored code

--- a/src/index.html
+++ b/src/index.html
@@ -139,28 +139,20 @@
                 <!-- timeline -->
                 <div class="timeline">
                     <div class="container-timeline container-left">
-                        <div class="content">
-                            <h3><span>July 2010</span><br/>Our Humble Beginnings</h3>
-                            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
-                        </div>
+                        <h3><span>July 2010</span><br/>Our Humble Beginnings</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                     </div>
                     <div class="container-timeline container-right">
-                        <div class="content">
-                            <h3><span>January 2011</span><br/>Facing Startup Battles</h3>
-                            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
-                        </div>
+                        <h3><span>January 2011</span><br/>Facing Startup Battles</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="container-timeline container-left">
-                        <div class="content">
-                            <h3><span>December 2012</span><br/>Enter The Dark Days</h3>
-                            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.</p>
-                        </div>
+                        <h3><span>December 2012</span><br/>Enter The Dark Days</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni.</p>
                     </div>
                     <div class="container-timeline container-right">
-                        <div class="content">
-                            <h3><span>February 2014</span><br/>Our Triumph</h3>
-                            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean.</p>
-                        </div>
+                        <h3><span>February 2014</span><br/>Our Triumph</h3>
+                        <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean.</p>
                     </div>
                     <div class="container-timeline container-left">
                     </div>
@@ -174,45 +166,45 @@
                     <h2>our amazing team</h2>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
                 </div>
-                <div class="team-members">
-                    <div class="team-member">
-                        <img src="" alt="">
+                <div class="row team-members">
+                    <div class="team-member col-lg-4">
+                        <img src="images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Kimberly Thompson</h3>
-                            <span>Marketer</span>
-                            <ul class="social-icons">
-                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                <li><a href=""><i class="fa fa-pinterest"></i></a></li>
-                            </ul>
+                            <p>Marketer</p>
+                            <div class="social-icons">
+                                <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
+                                <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
+                                <button class="icon-btn google-plus"><i class="fa fa-pinterest-p"></i></button>
+                            </div>
                         </div>
                     </div>
-                    <div class="team-member">
-                        <img src="" alt="">
+                    <div class="team-member col-lg-4">
+                        <img src="./images/our-team/team-member.png" alt="">
                         <div>
-                            <h3></h3>
-                            <span></span>
-                            <ul class="social-icons">
-                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                            </ul>
+                            <h3>Rico Massimo</h3>
+                            <p>Coder</p>
+                            <div class="social-icons">
+                                <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
+                                <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
+                                <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
+                            </div>
                         </div>
                     </div>
-                    <div class="team-member">
-                        <img src="" alt="">
+                    <div class="team-member col-lg-4">
+                        <img src="images/our-team/team-member.png" alt="">
                         <div>
-                            <h3></h3>
-                            <span></span>
-                            <ul class="social-icons">
-                                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                                <li><a href=""><i class="fa fa-pinterest"></i></a></li>
-                            </ul>
+                            <h3>Uku Mason</h3>
+                            <p>Graphic Designer</p>
+                            <div class="social-icons">
+                                <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
+                                <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="description">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    <h3>Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</h3>
                 </div>
             </div>
         </section>
