added section clients

--- a/src/index.html
+++ b/src/index.html
@@ -211,10 +211,12 @@
         <!-- clients -->
         <section id="clients">
             <div class="container">
-                <div class="logo"><img src="" alt=""></div>
-                <div class="logo"><img src="" alt=""></div>
-                <div class="logo"><img src="" alt=""></div>
-                <div class="logo"><img src="" alt=""></div>
+                <div class="logos row">
+                    <span class="logo col-lg-3"><img src="images/clients/client-1.png" alt=""></span>
+                    <span class="logo col-lg-3"><img src="images/clients/client-2.png" alt=""></span>
+                    <span class="logo col-lg-3"><img src="images/clients/client-3.png" alt=""></span>
+                    <span class="logo col-lg-3"><img src="images/clients/client-4.png" alt=""></span>
+                </div>
             </div>
         </section>
         <section id="form-contact">
