--- a/src/index.html
+++ b/src/index.html
@@ -225,11 +225,20 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
             </div>
             <div class="container">
-                <input type="text" placeholder="YOUR NAME*">
-                <input type="email" placeholder="YOUR E-MAIL*">
-                <input type="text" placeholder="SUBJECT">
-                <textarea name="" id="" cols="30" rows="10" placeholder="YOUR MESSAGE*"></textarea>
-                <button type="submit"><span>send message</span></button>
+                <form class="row">
+                    <div class="left col-lg-6">
+                        <input type="text" placeholder="your name *">
+                        <input type="email" placeholder="your e-mail *">
+                        <input type="text" placeholder="subject">
+                    </div>
+                    <div class="right col-lg-6">
+                        <textarea name="" id="" cols="30" rows="14" placeholder="your message *"></textarea>
+                    </div>
+                    <div class='buttonHolder'>
+                    	<button type="submit"><span>send message</span></button>	
+                    </div>
+                    
+                </form>
             </div>
         </section>
         <!-- footer -->
