added section footer

--- a/src/index.html
+++ b/src/index.html
@@ -235,26 +235,23 @@
                         <textarea name="" id="" cols="30" rows="14" placeholder="your message *"></textarea>
                     </div>
                     <div class='buttonHolder'>
-                    	<button type="submit"><span>send message</span></button>	
+                        <button type="submit"><span>send message</span></button>
                     </div>
-                    
                 </form>
             </div>
         </section>
         <!-- footer -->
         <footer>
-            <div class="copyright">
-                <div class="container">
-                    <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+            <div class="container">
+                <div class="social-media">
+                    <span class="copyright">
+                    &copy; Copyright 2014 FreebiesXpress.com
+                	</span>
+                    <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
+                    <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
+                    <button class="icon-btn pinterest"><i class="fa fa-pinterest-p"></i></button>
+                    <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
                 </div>
-            </div>
-            <div class="social-media">
-                <ul class="social-icons">
-                    <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                    <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                    <li><a href=""><i class="fa fa-pinterest"></i></a></li>
-                    <li><a href=""><i class="fa fa-google-plus"></i></a></li>
-                </ul>
             </div>
         </footer>
     </div>
