refactored footer section

--- a/src/index.html
+++ b/src/index.html
@@ -243,10 +243,10 @@
         <!-- footer -->
         <footer>
             <div class="container">
-                <div class="social-media">
-                    <span class="copyright">
+                <span class="copyright">
                     &copy; Copyright 2014 FreebiesXpress.com
-                	</span>
+                </span>
+                <div class="social-media text-center">
                     <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
                     <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
                     <button class="icon-btn pinterest"><i class="fa fa-pinterest-p"></i></button>
