--- a/src/index.html
+++ b/src/index.html
@@ -58,17 +58,17 @@
                     <p>Proin iaculis purus consequat sem cure. </p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 service">
+                    <div class="col-lg-4 col-xs-12 service">
                         <span><img src="images/icons/shopping-basket.png"></i></span>
                         <h3>E-Commerce</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="col-lg-4 service">
+                    <div class="col-lg-4 col-xs-12 service">
                         <span><img src="images//icons/computer.png"></span>
                         <h3>Responsive Web</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="col-lg-4 service">
+                    <div class="col-lg-4 col-xs-12 service">
                         <span><img src="images/icons/locked.png"></span>
                         <h3>Web Security</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
@@ -84,42 +84,42 @@
                     <p>Proin iaculis purus consequat sem cure.</p>
                 </div>
                 <div class="row gallery">
-                    <div class="col-lg-4 col-custom">
+                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="images/gallery/image-1.png">
                             <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-custom">
+                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="images/gallery/image-2.png">
                             <h3>Smart Stationary</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-custom">
+                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="images/gallery/image-3.png">
                             <h3>Clever Poster</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-custom">
+                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="images/gallery/image-4.png">
                             <h3>Print Design</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-custom">
+                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="images/gallery/image-5.png">
                             <h3>Treehouse Template</h3>
                             <p>Web Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-custom">
+                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="images/gallery/image-6.png">
                             <h3>Burned Logo</h3>
@@ -167,7 +167,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
                 </div>
                 <div class="row team-members">
-                    <div class="team-member col-lg-4">
+                    <div class="team-member col-lg-4 col-xs-12">
                         <img src="images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Kimberly Thompson</h3>
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-4">
+                    <div class="team-member col-lg-4 col-xs-12">
                         <img src="./images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Rico Massimo</h3>
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-4">
+                    <div class="team-member col-lg-4 col-xs-12">
                         <img src="images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Uku Mason</h3>
@@ -212,10 +212,10 @@
         <section id="clients">
             <div class="container">
                 <div class="logos row">
-                    <span class="logo col-lg-3"><img src="images/clients/client-1.png" alt=""></span>
-                    <span class="logo col-lg-3"><img src="images/clients/client-2.png" alt=""></span>
-                    <span class="logo col-lg-3"><img src="images/clients/client-3.png" alt=""></span>
-                    <span class="logo col-lg-3"><img src="images/clients/client-4.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-1.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-2.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-3.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-4.png" alt=""></span>
                 </div>
             </div>
         </section>
@@ -243,14 +243,14 @@
         <!-- footer -->
         <footer>
             <div class="container">
-                <span class="copyright">
-                    &copy; Copyright 2014 FreebiesXpress.com
-                </span>
                 <div class="social-media text-center">
                     <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
                     <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
                     <button class="icon-btn pinterest"><i class="fa fa-pinterest-p"></i></button>
                     <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
+                </div>
+                <div class="copyright">
+                    &copy; Copyright 2014 FreebiesXpress.com
                 </div>
             </div>
         </footer>
