--- a/src/index.html
+++ b/src/index.html
@@ -17,21 +17,23 @@
         <!-- Header -->
         <header>
             <nav>
-                <div class="container-fluid nav-bar">
-                    <div class="nav-logo">
-                        <a href="#!" title="Go back to homepage"><img src="images/header/logo.png"></a>
-                    </div>
-                    <div class="nav-menu">
-                        <ul class="nav-menu-content">
-                            <li><a href="#!">HOME</a></li>
-                            <li><a href="#!">SERVICES</a></li>
-                            <li><a href="#!">PORTFOLIO</a></li>
-                            <li><a href="#!">ABOUT</a></li>
-                            <li><a href="#!">CONTACT</a></li>
-                        </ul>
-                    </div>
-                    <div class="nav-mobile">
-                        <a href="#!" id='nav-toggle'></a>
+                <div class="container-fluid">
+                    <div class="nav-bar">
+                        <div class="nav-logo">
+                            <a href="#!" title="Go back to homepage"><img src="images/header/logo.png"></a>
+                        </div>
+                        <div class="nav-menu">
+                            <ul class="nav-menu-content nav-open">
+                                <li><a href="#!">HOME</a></li>
+                                <li><a href="#!">SERVICES</a></li>
+                                <li><a href="#!">PORTFOLIO</a></li>
+                                <li><a href="#!">ABOUT</a></li>
+                                <li><a href="#!">CONTACT</a></li>
+                            </ul>
+                        </div>
+                        <div class="nav-mobile">
+                            <a href="#!" id='nav-toggle'><span></span></a>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -218,24 +220,24 @@
             </div>
         </section>
         <section id="form-contact">
-                <div class="title">
-                    <h2>contact us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-                </div>
-                <div class="container">
-                    <form class="row">
-                        <div class="left col-lg-6">
-                            <input type="text" placeholder="your name *">
-                            <input type="email" placeholder="your e-mail *">
-                            <input type="text" placeholder="subject">
-                        </div>
-                        <div class="right col-lg-6">
-                            <textarea name="" id="" cols="30" rows="14" placeholder="your message *"></textarea>
-                        </div>
-                        <div class='buttonHolder'>
-                            <button type="submit"><span>send message</span></button>
-                        </div>
-                    </form>
+            <div class="title">
+                <h2>contact us</h2>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+            </div>
+            <div class="container">
+                <form class="row">
+                    <div class="left col-lg-6">
+                        <input type="text" placeholder="your name *">
+                        <input type="email" placeholder="your e-mail *">
+                        <input type="text" placeholder="subject">
+                    </div>
+                    <div class="right col-lg-6">
+                        <textarea name="" id="" cols="30" rows="14" placeholder="your message *"></textarea>
+                    </div>
+                    <div class='buttonHolder'>
+                        <button type="submit"><span>send message</span></button>
+                    </div>
+                </form>
             </div>
         </section>
         <!-- footer -->
@@ -253,6 +255,8 @@
             </div>
         </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
