--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                             <a href="#!" title="Go back to homepage"><img src="images/header/logo.png"></a>
                         </div>
                         <div class="nav-menu">
-                            <ul class="nav-menu-content nav-open">
+                            <ul class="nav-menu-content">
                                 <li><a href="#!">HOME</a></li>
                                 <li><a href="#!">SERVICES</a></li>
                                 <li><a href="#!">PORTFOLIO</a></li>
@@ -45,7 +45,10 @@
                     <div class="content">
                         <h2>Welcome To Our Studio!</h2>
                         <h1>it's nice to meet you</h1>
-                        <button><span>tell me more</span></button>
+                        <button>
+                            <a href="#services"></a>
+                            <span>tell me more</span>
+                        </button>
                     </div>
                 </div>
             </div>
