added jQuery functions

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
                         </div>
                         <div class="nav-menu">
                             <ul class="nav-menu-content">
-                                <li><a href="#!">HOME</a></li>
-                                <li><a href="#!">SERVICES</a></li>
-                                <li><a href="#!">PORTFOLIO</a></li>
-                                <li><a href="#!">ABOUT</a></li>
-                                <li><a href="#!">CONTACT</a></li>
+                                <li class='home'><a href="#!">HOME</a></li>
+                                <li class='services'><a href="#!">SERVICES</a></li>
+                                <li class='portfolio'><a href="#!">PORTFOLIO</a></li>
+                                <li class='about'><a href="#!">ABOUT</a></li>
+                                <li class='contact'><a href="#!">CONTACT</a></li>
                             </ul>
                         </div>
                         <div class="nav-mobile">
@@ -45,8 +45,7 @@
                     <div class="content">
                         <h2>Welcome To Our Studio!</h2>
                         <h1>it's nice to meet you</h1>
-                        <button>
-                            <a href="#services"></a>
+                        <button id='more'>
                             <span>tell me more</span>
                         </button>
                     </div>
@@ -257,6 +256,7 @@
                 </div>
             </div>
         </footer>
+        <a href="" id="button"><i class="fa fa-angle-up"></i></a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
