--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="src/css/style.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 <div class="container-fluid">
                     <div class="nav-bar">
                         <div class="nav-logo">
-                            <a href="#!" title="Go back to homepage"><img src="images/header/logo.png"></a>
+                            <a href="#!" title="Go back to homepage"><img src="src/images/header/logo.png"></a>
                         </div>
                         <div class="nav-menu">
                             <ul class="nav-menu-content">
@@ -61,17 +61,17 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-xs-12 service">
-                        <span><img src="images/icons/shopping-basket.png"></i></span>
+                        <span><img src="src/images/icons/shopping-basket.png"></i></span>
                         <h3>E-Commerce</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="col-lg-4 col-xs-12 service">
-                        <span><img src="images//icons/computer.png"></span>
+                        <span><img src="src/images/icons/computer.png"></span>
                         <h3>Responsive Web</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
                     <div class="col-lg-4 col-xs-12 service">
-                        <span><img src="images/icons/locked.png"></span>
+                        <span><img src="src/images/icons/locked.png"></span>
                         <h3>Web Security</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
@@ -88,42 +88,42 @@
                 <div class="row gallery">
                     <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
-                            <img src="images/gallery/image-1.png">
+                            <img src="src/images/gallery/image-1.png">
                             <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
-                            <img src="images/gallery/image-2.png">
+                            <img src="src/images/gallery/image-2.png">
                             <h3>Smart Stationary</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
-                            <img src="images/gallery/image-3.png">
+                            <img src="src/images/gallery/image-3.png">
                             <h3>Clever Poster</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
-                            <img src="images/gallery/image-4.png">
+                            <img src="src/images/gallery/image-4.png">
                             <h3>Print Design</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
-                            <img src="images/gallery/image-5.png">
+                            <img src="src/images/gallery/image-5.png">
                             <h3>Treehouse Template</h3>
                             <p>Web Design</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
                         <div class="image-box">
-                            <img src="images/gallery/image-6.png">
+                            <img src="src/images/gallery/image-6.png">
                             <h3>Burned Logo</h3>
                             <p>Branding</p>
                         </div>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="row team-members">
                     <div class="team-member col-lg-4 col-xs-12">
-                        <img src="images/our-team/team-member.png" alt="">
+                        <img src="src/images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Kimberly Thompson</h3>
                             <p>Marketer</p>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="team-member col-lg-4 col-xs-12">
-                        <img src="./images/our-team/team-member.png" alt="">
+                        <img src="src/images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Rico Massimo</h3>
                             <p>Coder</p>
@@ -194,7 +194,7 @@
                         </div>
                     </div>
                     <div class="team-member col-lg-4 col-xs-12">
-                        <img src="images/our-team/team-member.png" alt="">
+                        <img src="src/images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Uku Mason</h3>
                             <p>Graphic Designer</p>
@@ -214,10 +214,10 @@
         <section id="clients">
             <div class="container">
                 <div class="logos row">
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-1.png" alt=""></span>
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-2.png" alt=""></span>
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-3.png" alt=""></span>
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="images/clients/client-4.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-1.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-2.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-3.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-4.png" alt=""></span>
                 </div>
             </div>
         </section>
@@ -259,7 +259,7 @@
         <a href="" id="button"><i class="fa fa-angle-up"></i></a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="src/js/main.js"></script>
 </body>
 
 </html>
