refactored arrow back to the top

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 </div>
             </div>
         </footer>
-        <a href="" id="button"><i class="fa fa-angle-up"></i></a>
+        <a href="" id="button"><i class="arrow up"></i></a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="src/js/main.js"></script>
