--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name='viewport' content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="src/css/style.css">
 </head>
 
@@ -60,17 +58,17 @@
                     <p>Proin iaculis purus consequat sem cure. </p>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-xs-12 service">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 service">
                         <span><img src="src/images/icons/shopping-basket.png"></i></span>
                         <h3>E-Commerce</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="col-lg-4 col-xs-12 service">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 service">
                         <span><img src="src/images/icons/computer.png"></span>
                         <h3>Responsive Web</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="col-lg-4 col-xs-12 service">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 service">
                         <span><img src="src/images/icons/locked.png"></span>
                         <h3>Web Security</h3>
                         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
@@ -86,42 +84,42 @@
                     <p>Proin iaculis purus consequat sem cure.</p>
                 </div>
                 <div class="row gallery">
-                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="src/images/gallery/image-1.png">
                             <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="src/images/gallery/image-2.png">
                             <h3>Smart Stationary</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="src/images/gallery/image-3.png">
                             <h3>Clever Poster</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="src/images/gallery/image-4.png">
                             <h3>Print Design</h3>
                             <p>Print Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="src/images/gallery/image-5.png">
                             <h3>Treehouse Template</h3>
                             <p>Web Design</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-xs-12 col-custom">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 col-custom">
                         <div class="image-box">
                             <img src="src/images/gallery/image-6.png">
                             <h3>Burned Logo</h3>
@@ -169,38 +167,38 @@
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
                 </div>
                 <div class="row team-members">
-                    <div class="team-member col-lg-4 col-xs-12">
+                    <div class="team-member col-lg-4 col-md-4 col-xs-12">
                         <img src="src/images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Kimberly Thompson</h3>
                             <p>Marketer</p>
                             <div class="social-icons">
-                                <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
-                                <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
-                                <button class="icon-btn google-plus"><i class="fa fa-pinterest-p"></i></button>
+                                <button class="icon-btn twitter"><i class="fab fa-twitter"></i></button>
+                                <button class="icon-btn facebook"><i class="fab fa-facebook-f"></i></button>
+                                <button class="icon-btn google-plus"><i class="fab fa-pinterest-p"></i></button>
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-4 col-xs-12">
+                    <div class="team-member col-lg-4 col-md-4 col-xs-12">
                         <img src="src/images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Rico Massimo</h3>
                             <p>Coder</p>
                             <div class="social-icons">
-                                <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
-                                <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
-                                <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
+                                <button class="icon-btn twitter"><i class="fab fa-twitter"></i></button>
+                                <button class="icon-btn facebook"><i class="fab fa-facebook-f"></i></button>
+                                <button class="icon-btn google-plus"><i class="fab fa-google-plus-g"></i></button>
                             </div>
                         </div>
                     </div>
-                    <div class="team-member col-lg-4 col-xs-12">
+                    <div class="team-member col-lg-4 col-md-4 col-xs-12">
                         <img src="src/images/our-team/team-member.png" alt="">
                         <div>
                             <h3>Uku Mason</h3>
                             <p>Graphic Designer</p>
                             <div class="social-icons">
-                                <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
-                                <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
+                                <button class="icon-btn facebook"><i class="fab fa-facebook-f"></i></button>
+                                <button class="icon-btn google-plus"><i class="fab fa-google-plus-g"></i></button>
                             </div>
                         </div>
                     </div>
@@ -214,13 +212,14 @@
         <section id="clients">
             <div class="container">
                 <div class="logos row">
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-1.png" alt=""></span>
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-2.png" alt=""></span>
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-3.png" alt=""></span>
-                    <span class="logo col-lg-3 col-md-6 col-xs-12"><img src="src/images/clients/client-4.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-3 col-xs-12"><img src="src/images/clients/client-1.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-3 col-xs-12"><img src="src/images/clients/client-2.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-3 col-xs-12"><img src="src/images/clients/client-3.png" alt=""></span>
+                    <span class="logo col-lg-3 col-md-3 col-xs-12"><img src="src/images/clients/client-4.png" alt=""></span>
                 </div>
             </div>
         </section>
+        <!-- Form-contact -->
         <section id="form-contact">
             <div class="title">
                 <h2>contact us</h2>
@@ -228,16 +227,16 @@
             </div>
             <div class="container">
                 <form class="row">
-                    <div class="left col-lg-6">
+                    <div class="left col-lg-6 col-md-6">
                         <input type="text" placeholder="your name *">
                         <input type="email" placeholder="your e-mail *">
                         <input type="text" placeholder="subject">
                     </div>
-                    <div class="right col-lg-6">
+                    <div class="right col-lg-6 col-md-6">
                         <textarea name="" id="" cols="30" rows="14" placeholder="your message *"></textarea>
                     </div>
                     <div class='buttonHolder'>
-                        <button type="submit"><span>send message</span></button>
+                        <button type="button"><span>send message</span></button>
                     </div>
                 </form>
             </div>
@@ -246,10 +245,10 @@
         <footer>
             <div class="container">
                 <div class="social-media text-center">
-                    <button class="icon-btn twitter"><i class="fa fa-twitter"></i></button>
-                    <button class="icon-btn facebook"><i class="fa fa-facebook"></i></button>
-                    <button class="icon-btn pinterest"><i class="fa fa-pinterest-p"></i></button>
-                    <button class="icon-btn google-plus"><i class="fa fa-google-plus"></i></button>
+                    <button class="icon-btn twitter"><i class="fab fa-twitter"></i></button>
+                    <button class="icon-btn facebook"><i class="fab fa-facebook-f"></i></button>
+                    <button class="icon-btn pinterest"><i class="fab fa-pinterest-p"></i></button>
+                    <button class="icon-btn google-plus"><i class="fab fa-google-plus-g"></i></button>
                 </div>
                 <div class="copyright">
                     &copy; Copyright 2014 FreebiesXpress.com
@@ -258,6 +257,7 @@
         </footer>
         <a href="" id="button"><i class="arrow up"></i></a>
     </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="src/js/main.js"></script>
 </body>
