nav bar new style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,40 @@
 <body>
     <!-- main container -->
     <div class="main-container">
-        <!-- Header -->
+        <!-- Nav & home -->
+        <section id="header">
+            <hgroup>
+                <div class="opacity">
+                    <div class="container-fluid">
+                        <nav>
+                            <div class="logo">
+                                <img src="src/images/header/logo.png" alt="golden logo">
+                            </div>
+                            <div class="nav-bar">
+                                <ul class="nav-content">
+                                    <li><a href="">Home</a></li>
+                                    <li><a href="">Services</a></li>
+                                    <li><a href="">Portfolio</a></li>
+                                    <li><a href="">About</a></li>
+                                    <li><a href="">Contact</a></li>
+                                </ul>
+                            </div>
+                            <div class="nav-mobile">
+                                <a href="#!" id='nav-toggle'><span></span></a>
+                            </div>
+                        </nav>
+                    </div>
+                    <header class="content">
+                        <h2>Welcome To Our Studio!</h2>
+                        <h1>it's nice to meet you</h1>
+                        <button id='more'>
+                            <span>tell me more</span>
+                        </button>
+                    </header>
+                </div>
+            </hgroup>
+        </section>
+        <!-- Header
         <header>
             <nav>
                 <div class="container-fluid">
@@ -36,7 +69,7 @@
                 </div>
             </nav>
         </header>
-        <!-- Parallax -->
+        Parallax
         <section id="home">
             <div class="photo-inner">
                 <div class="container-fluid">
@@ -49,7 +82,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Services -->
         <section id="services">
             <div class="container">
