--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                             </div>
                             <div class="nav-bar">
                                 <ul class="nav-content">
-                                    <li><a href="">Home</a></li>
-                                    <li><a href="">Services</a></li>
-                                    <li><a href="">Portfolio</a></li>
-                                    <li><a href="">About</a></li>
-                                    <li><a href="">Contact</a></li>
+                                    <li class='home'><a href="#!">Home</a></li>
+                                    <li class='services'><a href="#!">Services</a></li>
+                                    <li class='portfolio'><a href="#!">Portfolio</a></li>
+                                    <li class='about'><a href="#!">About</a></li>
+                                    <li class='contact'><a href="#!">Contact</a></li>
                                 </ul>
                             </div>
                             <div class="nav-mobile">
                                 <a href="#!" id='nav-toggle'><span></span></a>
                             </div>
                         </nav>
+                        <header class="content">
+                            <h2>Welcome To Our Studio!</h2>
+                            <h1>it's nice to meet you</h1>
+                            <button id='more'>
+                                <span>tell me more</span>
+                            </button>
+                        </header>
                     </div>
-                    <header class="content">
-                        <h2>Welcome To Our Studio!</h2>
-                        <h1>it's nice to meet you</h1>
-                        <button id='more'>
-                            <span>tell me more</span>
-                        </button>
-                    </header>
                 </div>
             </hgroup>
         </section>
