fixed error in nav

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 </div>
             </div>
         </footer>
-        <a href="" id="button"><i class="arrow up"></i></a>
+        <a href="" id="button" class='unactive'><i class="arrow up"></i></a>
     </div>
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
